<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.register.RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:animateLayoutChanges="true"
        tools:ignore="MissingDefaultResource">



        <RelativeLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:ignore="PrivateResource">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="10dp"
                app:cardMaxElevation="12dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_marginBottom="35dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentBottom="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginEnd="20dp"
                            android:layout_marginBottom="20dp"
                            android:orientation="vertical">


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_total_pages"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edit_text_total_pages"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/total_pages"
                                    android:inputType="number"
                                    android:focusableInTouchMode="false"
                                    android:focusable="false"
                                    android:imeOptions="actionNext" />

                            </com.google.android.material.textfield.TextInputLayout>


                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/text_input_pages_read"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/edit_text_pages_read"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/total_read_pages"
                                    android:inputType="number"
                                    android:text="0"
                                    android:imeOptions="actionNext" />

                            </com.google.android.material.textfield.TextInputLayout>


                        </LinearLayout>

                    </ScrollView>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/save"
                android:elevation="40dp"
                android:text="@string/save"
                android:textColor="@color/white" />

        </RelativeLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

